[gd_scene load_steps=3 format=3 uid="uid://c485gcvalxniv"]

[ext_resource type="Script" path="res://Scenes/Pieces/MetalPiece2D.gd" id="1_wkewi"]
[ext_resource type="Script" path="res://Scenes/Pieces/HeatController.gd" id="2_2fmst"]

[node name="MetalPiece2D" type="RigidBody2D"]
input_pickable = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_wkewi")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-7, -4, 7, -4, 7, 3, -7, 3)

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-7, -4, 7, -4, 7, 3, -7, 3)

[node name="HeatController" type="Node" parent="." node_paths=PackedStringArray("body_2d")]
script = ExtResource("2_2fmst")
specific_heat_capacity = 300.0
body_2d = NodePath("..")

[node name="Timer" type="Timer" parent="HeatController"]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="HeatController/Timer" to="HeatController" method="print_status"]
